--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
-    <title>App Name</title>
+    <title>TECH TV MAX</title>
 
     <!--add animation: gradient 60s ease infinite; to animation gradient, custom gradient here: https://cssgradient.io/-->
     <style>
@@ -45,7 +45,7 @@ background: linear-gradient(150deg, rgba(255,64,129,1) 0%, rgba(63,81,181,1) 21%
 
                 <div class="col-lg-9">
 
-                    <h1>App Name</h1>
+                    <h1>TECH TV MAX</h1>
                     <p class="lead">Mussum Ipsum, cacilds vidis litro abertis. Si u mundo tá muito paradis? Toma um mé que o mundo vai girarzis! Admodum accumsan disputationi eu sit. Vide electram sadipscing et per. Interagi no mé, cursus quis, vehicula ac nisi. Aenean aliquam molestie leo, vitae iaculis nisl.</p>
                     <p><img src="src/img/badges/ios.svg" width="35%"><img src="https://cdn.rawgit.com/steverichey/google-play-badge-svg/master/img/en_get.svg" width="43%"></p>
 
@@ -120,7 +120,7 @@ background: linear-gradient(150deg, rgba(255,64,129,1) 0%, rgba(63,81,181,1) 21%
       <footer class="text-muted py-5" style="background-color: black;">
         <div class="container text-white">
          
-          <p>Created with love from Brazil by <a href="https://github.com/alexandresanlim">Alexandre Sanlim</a> fork on <a href="https://github.com/alexandresanlim/MobileApp.SimpleLandingPage.Template">Github</a>.</p>
+          <p>Created with love from AstraTech by <a href="https://github.com/alexandresanlim">Astra3Code</a> fork on <a href="https://github.com/alexandresanlim/MobileApp.SimpleLandingPage.Template">Github</a>.</p>
         </div>
       </footer>
       
