--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@ background: linear-gradient(150deg, rgba(255,64,129,1) 0%, rgba(63,81,181,1) 21%
           <!-- SET YOUR SCREENSHOTS HERE -->
           <div class="row align-items-center">
               <figure class="figure col-lg-3"><img src="https://i.postimg.cc/nzm4GkS7/Screenshot-20250703-143015.jpg" class="figure-img img-fluid rounded"></figure>
-              <figure class="figure col-lg-3"><img src="https://via.placeholder.com/1242x2208.png/000000/FFFFFF/?text=SCREENSHOT%202" class="figure-img img-fluid rounded"></figure>
-              <figure class="figure col-lg-3"><img src="https://via.placeholder.com/1242x2208.png/000000/FFFFFF/?text=SCREENSHOT%203" class="figure-img img-fluid rounded"></figure>
-              <figure class="figure col-lg-3"><img src="https://via.placeholder.com/1242x2208.png/000000/FFFFFF/?text=SCREENSHOT%204" class="figure-img img-fluid rounded"></figure>
+              <figure class="figure col-lg-3"><img src="https://i.postimg.cc/Bnv2VswJ/Screenshot-20250703-162711.jpg" class="figure-img img-fluid rounded"></figure>
+              <figure class="figure col-lg-3"><img src="https://i.postimg.cc/4ySX46ZL/Screenshot-20250703-162946.jpg" class="figure-img img-fluid rounded"></figure>
+              <figure class="figure col-lg-3"><img src="https://i.postimg.cc/8P71K0Bq/Screenshot-20250703-163310.jpg" class="figure-img img-fluid rounded"></figure>
           </div>
 
         </div>
