--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ background: linear-gradient(150deg, rgba(255,64,129,1) 0%, rgba(63,81,181,1) 21%
             <div class="row">
 
               <!-- SET YOUR LOGO HERE -->
-                <figure class="figure col-lg-3"><img src="https://via.placeholder.com/512x512.png/000000/FFFFFF/?text=APP%20LOGO" class="figure-img img-fluid rounded"></figure>
+                <figure class="figure col-lg-3"><img src="https://i.postimg.cc/yYhKFFKt/2402183-ico-removebg-preview.png" class="figure-img img-fluid rounded"></figure>
 
                 <div class="col-lg-9">
 
